# latest-104-resume-clinic-scheduler

./: .cicd-test.md  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DATE_PICKER_FIX_SUMMARY.md  DELAY_TIMES_GUIDE.md  EVENT_DELEGATION_OPTIMIZATION.md  LOGGER_OPTIMIZATION_GUIDE.md  Makefile  OVERLAP_VALIDATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  SUBMIT_BUTTON_STYLE_FIX_SUMMARY.md  SUBMIT_SCHEDULES_DEBUG_SUMMARY.md  SUBMIT_SCHEDULES_FINAL_FIX_SUMMARY.md  SUBMIT_SCHEDULES_FIX_SUMMARY.md  VALIDATION_REFACTOR_PLAN.md  alembic.ini  env  env.example  improved_to_dict_examples.py  openapi.json  performance_test.py  pyproject.toml  pytest-integration.ini  pytest.ini  requirements.txt  t.ini  test_api_fix.js  test_chat_session_debug.js  test_date_picker.js  test_schedule_submission.py  test_submit_button_style.js  test_submit_schedules_debug.js  test_submit_schedules_final_fix.js  test_submit_schedules_fix.js  test_wang_shi_yi_fix.js  test_wang_shi_yi_python.py
.github/workflows/: README.md  ci.yml  dependency-update.yml  test-only.yml
alembic/: env.py
alembic/sql_previews/: preview_20250809_1444_add_user_phone.sql  preview_20250809_1715_create_updated_by_field.sql  preview_20250809_1717_建立_updated_by_欄位.sql  preview_changes.sql
alembic/versions/: 2025_08_09_1114-c6dd3264fae3_初始資料庫結構.py  2025_08_09_1114-c6dd3264fae3_建立基準線_現有資料庫結構.py  2025_08_09_1420-040fda16b06b_同步資料庫型別.py  2025_08_09_1420-040fda16b06b_檢查變更.py  2025_08_09_1628-1b8e77816819_新增updated_by欄位_使用正確的int_unsigned型別.py  2025_08_09_1652-5ddd0e85e3a2_新增giver_id和taker_id的外鍵約束.py  2025_08_09_1839-2dcbc8a2d77c_新增updated_by_role欄位記錄更新者角色.py  2025_08_09_1845-acb071f5b7f1_修改updated_by_role欄位為enum型別.py  2025_08_09_1957-ff37a0caee1d_mvp_1_feat_users_add_role_column.py  2025_08_09_2024-a9ef819c8b8c_移除schedules表格中多餘的role欄位.py  2025_08_10_1043-32efeee7e8d4_更新_mysql_workbench_的_users_資料表.py  2025_08_10_1049-3db1a1b68bc8_移除int欄位的顯示寬度.py  2025_08_10_1923-ed53f944c082_更新_mysql_workbench_的_schedules_資料表結構.py  2025_08_10_2057-aa7f6842ac0d__format_datetime__safe_getattr函式提取為工具函式.py  2025_08_12_2035-721428ee321a_schema_資料夾的_user_py_schedules_py_優化.py  2025_08_17_1952-02e132afa7f0_新增_created_by_created_by_role_deleted_.py  2025_08_17_2042-4e43517f2669_移除_users_表的_updated_by_欄位.py  2025_08_17_2347-985e30da6e53_add_new_indexes.py  2025_08_23_0135-0430aeaf5d1e_設定_sql_mode_嚴格模式.py  2025_09_16_1941-845a270e5e19_更新角色欄位為enum類型並設定預設值.py
app/: __init__.py  config.py  factory.py  main.py
app/core/: __init__.py  giver_data.py  settings.py
app/crud/: __init__.py  crud_schedule.py  crud_user.py  schedule.py  user.py
app/data/: __init__.py  givers.py
app/database/: __init__.py  base.py  connection.py
app/decorators/: __init__.py  error_handlers.py  logging.py
app/enums/: __init__.py  models.py  operations.py
app/errors/: __init__.py  constants.py  exceptions.py  formatters.py  handlers.py  utils.py
app/middleware/: __init__.py  cors.py  error_handler.py
app/models/: __init__.py  database.py  enums.py  schedule.py  user.py
app/routers/: __init__.py  admin.py  chat.py  giver.py  health.py  main.py  match.py  schedule.py  taker.py
app/schemas/: __init__.py  health.py  schedule.py  user.py
app/services/: __init__.py  schedule.py  schedule_service.py  user.py  user_service.py
app/templates/: base.html  giver_list.html  index.html
app/utils/: __init__.py  constants.py  crud_decorators.py  error_handler.py  logger.py  model_helpers.py  schedule_validator.py  timezone.py  validators.py
app/validation/: __init__.py  base.py  business.py  parameter.py  schedule.py  types.py  users.py
database/: README.md  schema.sql  schema_best_practice.sql  schema_corrected.sql  schema_utc.sql
database/backups/: backup_20250809_1444_before_add_user_phone.sql  backup_20250809_1715_before_create_updated_by_field.sql  users_backup_before_email_update_20250809_230105.json
docs/: README.md  __init__.py  feature-implementation.md  message_optimization.md  tech-quickstart-insight.md  test_constants_guide.md  test_constants_restructure.md  timezone_solution.md  user-stories.md
docs/automation/: postman_export_guide.md
docs/best-practices/: __init__.py  import_guidelines.md
docs/collaboration/: README.md  collaboration-overview.md  frontend-collaboration-checklist.md  pm-collaboration-checklist.md  qa-collaboration-checklist.md  uiux-collaboration-checklist.md
docs/examples/: __init__.py  to_dict_method_examples.py
docs/guides/: __init__.py
docs/maintenance/: add_audit_fields_update.md  naming_unification_update.md  print_to_logger_migration.md  remove_users_updated_by_field.md
docs/postman/: 104 Resume Clinic Scheduler.postman_collection.json
docs/technical/: __init__.py
docs/testing/: 104_resume_clinic_api_collection.json  postman_testing_guide.md  schedule_api_examples.md
docs/troubleshooting/: __init__.py  python_multipart_migration.md  (+1 more)
scripts/: README.md  __init__.py  backup_and_preview.bat  clear_cache.bat  clear_cache.py  config_validator.py  cors_check.py  cors_config_checker.py  cors_security_check.py  create_giver_users.py  create_test_data.py  diagnose_timestamp.py  export_postman.bat  export_to_postman.py  fix_imports.py  fix_timezone.py  health_check.py  migrate_to_local_time.py  migrate_to_utc.py  quick-test.bat  quick-test.sh  run-ci-locally.bat  run-ci-locally.sh  run_tests.bat  run_tests.py  setup_git_hooks.py  test_api.py  test_config.py  test_database_config.py  test_database_connection.py  test_settings_validators.py  test_utc_migration.py  update_user_emails.py  update_user_emails.sql  update_user_emails_simple.py  watch_and_export.py
static/: README.md  script.js  style.css
tests/: README.md  __init__.py  conftest.py  constants.py  logger.py  test_api_givers.py  test_api_schedule_comprehensive.py  test_api_schedule_routes.py  test_api_schedule_simple.py  test_api_users.py  test_config.py  test_cors_middleware.py  test_crud_schedule.py  test_data_givers.py  test_health.py  test_health_new_style.py  test_main.py  test_model_helpers.py  test_structure.py
(+195 files in other folders)
